finished collection page

--- a/collection-page/index.html
+++ b/collection-page/index.html
@@ -47,35 +47,29 @@
     <main>
         <!-- "Tampilan" paling atas -->
         <section class="hero__jumbotron">
-            <h1 class="hero__title">SEJARAH PERPOSAN</h1>
+            <h1 class="hero__title">RUANGAN KOLEKSI</h1>
         </section>
 
-        <!-- Dashboard ini -->
-        <section class="dashboard">
-            <div class="dashboard__articles row">
+        <!-- collection ini -->
+        <section class="collection">
+            <div class="collection_list row">
                 <!-- Ini nanti yang bakalan di loop kalo misalkan datanya ngambil dari database. -->
-                <div class="article__card">
-                    <img src="assets/img/kerajaan.webp" alt="SEJARAH PERPOSAN">
-                    <h4 class="article__title">SEJARAH PERPOSAN</h4>
-                    <p class="article__description">Cari tahu tentang Sejarah Perposan di indonesia</p>
+                <div class="collection_card">
+                    <img src="assets/img/filateli.webp" alt="Filateli">
+                    <h4 class="article__title">RUANG KOLEKSI FILATELI</h4>
+                    <p class="article__description">Pelajari perposan masa kerajaan</p>
                     <a href="#" class="article__detail">BACA LEBIH LANJUT</a>
                 </div>
-                <div class="article__card">
-                    <img src="assets/img/filateli.webp" alt="RUANG KOLEKSI">
-                    <h4 class="article__title">RUANG KOLEKSI</h4>
+                <div class="collection_card">
+                    <img src="assets/img/peralatan.webp" alt="Peralatan">
+                    <h4 class="article__title">RUANG KOLEKSI PERALATAN</h4>
                     <p class="article__description">Jelajahi setiap ruang koleksi yang ada di Museum</p>
                     <a href="#" class="article__detail">BACA LEBIH LANJUT</a>
                 </div>
-                <div class="article__card">
-                    <img src="assets/img/prisma.webp" alt="PRISMA">
-                    <h4 class="article__title">PRISMA</h4>
+                <div class="collection_card">
+                    <img src="assets/img/surat.webp" alt="Surat">
+                    <h4 class="article__title">RUANG KOLEKSI SEJARAH</h4>
                     <p class="article__description">Abadikan momen terindahmu dalam Prangko Identitas Milik Anda</p>
-                    <a href="#" class="article__detail">BACA LEBIH LANJUT</a>
-                </div>
-                <div class="article__card">
-                    <img src="assets/img/kegiatan.webp" alt="HIGHLIGHT KUNJUNGAN MUSEUM">
-                    <h4 class="article__title">HIGHLIGHT KUNJUNGAN MUSEUM</h4>
-                    <p class="article__description">Highlight kunjungan dan kegiatan museum</p>
                     <a href="#" class="article__detail">BACA LEBIH LANJUT</a>
                 </div>
             </div>
