--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
             </div>
 
             <div class="detail__location">
-                <h2>MUSEUM <span class="orange__font">POS INDONESIA</span></h2>
+                <h2>MUSEUM <span>POS INDONESIA</span></h2>
                 <div class="detail__list">
                     <div class="detail__item">
                         <div class="detail__icon">
