finished hamburger menu toggler button

--- a/home.html
+++ b/home.html
@@ -40,7 +40,20 @@
             <button class="reservation__btn">RESERVASI</button>
         </div>
         <div class="mobile__version">
-            <i class="fa-solid fa-bars"></i>
+            <i class="fa-solid fa-bars" id="menu-toggle"></i>
+            <div class="navigation">
+                <i class="fa-solid fa-xmark" id="close-toggle"></i>
+                <nav class="nav__list-mobile">
+                    <ul class="nav__links-mobile">
+                        <a href="#" class="nav__item">BERANDA</a>
+                        <a href="#" class="nav__item">PROFIL</a>
+                        <a href="#" class="nav__item">SEJARAH</a>
+                        <a href="#" class="nav__item">RUANGAN</a>
+                        <a href="#" class="nav__item">KONTAK</a>
+                    </ul>
+                </nav>
+                <button class="reservation__btn-mobile">RESERVASI</button>
+            </div>
         </div>
     </header>
 
@@ -54,7 +67,8 @@
         <!-- Deskripsi singkat ttg Telkom Ind..  Ehhh lupa, maksudnya Museum Pos -->
         <section class="about">
             <div class="col">
-                <h2 class="about__title">SELAMAT DATANG DI WEBSITE <span class="orange__font">MUSEUM POS INDONESIA</span></h2>
+                <h2 class="about__title">SELAMAT DATANG DI WEBSITE <span class="orange__font">MUSEUM POS
+                        INDONESIA</span></h2>
                 <div class="about__description">
                     <p>
                         Museum Pos Indonesia sebagai salah satu tujuan wisata yang menarik dan mampu memberikan
@@ -183,6 +197,8 @@
             </section>
         </div>
     </footer>
+
+    <script src="assets/script/script.js"></script>
 </body>
 
 </html>
