--- a/collection.html
+++ b/collection.html
@@ -120,6 +120,8 @@
             </section>
         </div>
     </footer>
+
+    <script src="assets/script/script.js"></script>
 </body>
 
 </html>
