--- a/contact.html
+++ b/contact.html
@@ -139,6 +139,8 @@
             </section>
         </div>
     </footer>
+
+    <script src="assets/script/script.js"></script>
 </body>
 
 </html>
