--- a/history.html
+++ b/history.html
@@ -126,6 +126,8 @@
             </section>
         </div>
     </footer>
+
+    <script src="assets/script/script.js"></script>
 </body>
 
 </html>
