--- a/profile.html
+++ b/profile.html
@@ -107,6 +107,8 @@
             </section>
         </div>
     </footer>
+
+    <script src="assets/script/script.js"></script>
 </body>
 
 </html>
