--- a/collection.html
+++ b/collection.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Document</title>
+    <!-- tolong diubah titlenya ini (masih kurang) -->
+    <title>Collection Page</title>
 
     <!-- style -->
     <link rel="stylesheet" href="assets/style/collection.css">
@@ -45,15 +46,12 @@
     </header>
 
     <main>
-        <!-- "Tampilan" paling atas -->
         <section class="hero__jumbotron">
             <h1 class="hero__title">RUANGAN KOLEKSI</h1>
         </section>
 
-        <!-- collection ini -->
         <section class="collection">
             <div class="collection_list row">
-                <!-- Ini nanti yang bakalan di loop kalo misalkan datanya ngambil dari database. -->
                 <div class="collection_card">
                     <img src="assets/img/filateli.webp" alt="Filateli">
                     <h4 class="article__title">RUANG KOLEKSI FILATELI</h4>
@@ -78,7 +76,6 @@
 
     <footer>
         <div class="col">
-            <!-- left side -->
             <section class="history">
                 <h2 class="history__title">MUSEUM POS INDONESIA</h2>
                 <p class="history__description">Sejalan dengan perkembangan perusahaan pos dimana terhitung tanggal 20
@@ -99,7 +96,6 @@
             </section>
         </div>
         <div class="col">
-            <!-- right side -->
             <h4 class="quick__link-title">quick links</h4>
             <nav class="quick__links">
                 <a href="#"><i class="fa-solid fa-chevron-right"></i> Profil</a>
