--- a/history.html
+++ b/history.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Document</title>
+    <!-- tolong diubah titlenya ini (masih kurang) -->
+    <title>History Page</title>
 
     <!-- style -->
     <link rel="stylesheet" href="assets/style/history.css">
@@ -45,15 +46,12 @@
     </header>
 
     <main>
-        <!-- "Tampilan" paling atas -->
         <section class="hero__jumbotron">
             <h1 class="hero__title">SEJARAH PERPOSAN</h1>
         </section>
 
-        <!-- Dashboard ini -->
         <section class="dashboard">
             <div class="dashboard__articles row">
-                <!-- Ini nanti yang bakalan di loop kalo misalkan datanya ngambil dari database. -->
                 <div class="article__card">
                     <img src="assets/img/kerajaan.webp" alt="SEJARAH PERPOSAN">
                     <h4 class="article__title">SEJARAH PERPOSAN</h4>
@@ -84,7 +82,6 @@
 
     <footer>
         <div class="col">
-            <!-- left side -->
             <section class="history">
                 <h2 class="history__title">MUSEUM POS INDONESIA</h2>
                 <p class="history__description">Sejalan dengan perkembangan perusahaan pos dimana terhitung tanggal 20
@@ -105,7 +102,6 @@
             </section>
         </div>
         <div class="col">
-            <!-- right side -->
             <h4 class="quick__link-title">quick links</h4>
             <nav class="quick__links">
                 <a href="#"><i class="fa-solid fa-chevron-right"></i> Profil</a>
