--- a/home.html
+++ b/home.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Document</title>
+    <!-- tolong diubah titlenya ini (masih kurang) -->
+    <title>Home Page</title>
 
     <!-- style -->
     <link rel="stylesheet" href="assets/style/home.css">
@@ -58,13 +59,11 @@
     </header>
 
     <main>
-        <!-- "Tampilan" paling atas -->
         <section class="hero__jumbotron">
             <h1 class="hero__title">museum pos indonesia</h1>
             <button class="hero__detail">pelajari selengkapnya</button>
         </section>
 
-        <!-- Deskripsi singkat ttg Telkom Ind..  Ehhh lupa, maksudnya Museum Pos -->
         <section class="about">
             <div class="col">
                 <h2 class="about__title">SELAMAT DATANG DI WEBSITE <span class="orange__font">MUSEUM POS
@@ -110,13 +109,9 @@
             </div>
         </section>
 
-        <!-- Dashboard ini -->
         <section class="dashboard">
             <h3 class="dashboard__title">DASHBOARD</h3>
             <div class="dashboard__articles row">
-
-                <!-- Ini nanti yang bakalan di loop kalo misalkan datanya ngambil dari database. -->
-
                 <div class="article__card">
                     <img src="assets/img/kerajaan.webp" alt="SEJARAH PERPOSAN">
                     <h4 class="article__title">SEJARAH PERPOSAN</h4>
@@ -144,7 +139,6 @@
             </div>
         </section>
 
-        <!-- Reservasi -->
         <div class="reservation">
             <h3>RESERVASI <span class="orange__font">KUNJUNGAN</span></h3>
             <p>Sekarang anda dapat reservasi kunjungan / rombongan langsung melalui web, cukup pilih jenis rombongan
@@ -155,7 +149,6 @@
 
     <footer>
         <div class="col">
-            <!-- left side -->
             <section class="history">
                 <h2 class="history__title">MUSEUM POS INDONESIA</h2>
                 <p class="history__description">Sejalan dengan perkembangan perusahaan pos dimana terhitung tanggal 20
@@ -176,7 +169,6 @@
             </section>
         </div>
         <div class="col">
-            <!-- right side -->
             <h4 class="quick__link-title">quick links</h4>
             <nav class="quick__links">
                 <a href="#"><i class="fa-solid fa-chevron-right"></i> Profil</a>
