--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Document</title>
+    <!-- tolong diubah titlenya ini (masih kurang) -->
+    <title>Profile Page</title>
 
     <!-- style -->
     <link rel="stylesheet" href="assets/style/profile.css">
@@ -43,7 +44,6 @@
     </header>
 
     <main>
-        <!-- "Tampilan" paling atas -->
         <section class="hero__jumbotron">
             <h1 class="hero__title">profil</h1>
         </section>
