--- a/home.html
+++ b/home.html
@@ -9,8 +9,12 @@
     <!-- tolong diubah titlenya ini (masih kurang) -->
     <title>Home Page</title>
 
-    <!-- style -->
+    <!-- Own Style -->
     <link rel="stylesheet" href="assets/style/home.css">
+
+    <!-- Bootstrap Style -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/d674aa5530.js" crossorigin="anonymous"></script>
@@ -24,11 +28,11 @@
 </head>
 
 <body>
-    <header class="row">
+    <header>
         <a href="#" class="logo">
             <img src="assets/img/logo.webp" alt="Logo Museum Pos">
         </a>
-        <div class="desktop__version row">
+        <div class="desktop__version">
             <nav class="nav__list">
                 <ul class="nav__links">
                     <a href="#" class="nav__item">BERANDA</a>
@@ -60,8 +64,24 @@
 
     <main>
         <section class="hero__jumbotron">
-            <h1 class="hero__title">museum pos indonesia</h1>
-            <button class="hero__detail">pelajari selengkapnya</button>
+            <div class="content__jumbotron">
+                <h1 class="hero__title">museum pos indonesia</h1>
+                <button class="hero__detail">pelajari selengkapnya</button>
+            </div>
+
+            <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="..." class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="about">
@@ -73,7 +93,7 @@
                         Museum Pos Indonesia sebagai salah satu tujuan wisata yang menarik dan mampu memberikan
                         kontribusi positif bagi peningkatan citra Perusahaan.<br>Misi kami adalah untuk :
                     </p>
-                    <div class="row">
+                    <div class="benefit">
                         <div class="card__desc">
                             <i class="fa-solid fa-circle orange__font"></i>
                             <p><span class="orange__font">Mewujudkan</span> Museum Pos Indonesia yang mampu berperan
@@ -111,7 +131,7 @@
 
         <section class="dashboard">
             <h3 class="dashboard__title">DASHBOARD</h3>
-            <div class="dashboard__articles row">
+            <div class="dashboard__articles">
                 <div class="article__card">
                     <img src="assets/img/kerajaan.webp" alt="SEJARAH PERPOSAN">
                     <h4 class="article__title">SEJARAH PERPOSAN</h4>
@@ -176,7 +196,7 @@
                 <a href="#"><i class="fa-solid fa-chevron-right"></i> Ruangan</a>
                 <a href="#"><i class="fa-solid fa-chevron-right"></i> Kontak</a>
             </nav>
-            <section class="social__media row">
+            <section class="social__media">
                 <div class="tiktok">
                     <i class="fa-brands fa-tiktok"></i>
                 </div>
@@ -190,7 +210,11 @@
         </div>
     </footer>
 
+    <!-- Own Script -->
     <script src="assets/script/script.js"></script>
+
+    <!-- Bootstrap Script -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
